<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="160dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hotel_card_view_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/room_card_background_desing"
            android:contentDescription="@string/hotel_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hotel_card_view_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:text="@string/hotel_title"
            android:textColor="#0E0E0E"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_card_view_image"
            tools:ignore="RtlSymmetry,SmallSp" />

        <TextView
            android:id="@+id/hotel_card_view_location"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:text="@string/aurangabad"
            android:textSize="7sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_card_view_title"
            tools:ignore="RtlSymmetry,SmallSp" />


        <TextView
            android:id="@+id/hotel_card_view_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:text="₹200000000"
            android:textColor="#07830C"
            android:textSize="7sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_card_view_location" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="₹20000"
            android:textSize="7sp"
            app:layout_constraintBottom_toBottomOf="@+id/hotel_card_view_offer"
            app:layout_constraintStart_toEndOf="@+id/hotel_card_view_offer"
            app:layout_constraintTop_toTopOf="@+id/hotel_card_view_offer"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="18dp"
            android:layout_height="21dp"
            android:contentDescription="@string/wishlist_button"
            app:layout_constraintBottom_toBottomOf="@+id/hotel_card_view_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/like_favorite_border_24"
            tools:ignore="VectorDrawableCompat,RedundantDescriptionCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/star_background"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/hotel_card_view_offer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hotel_card_view_offer">

            <TextView
                android:id="@+id/textView"
                android:layout_width="14dp"
                android:layout_height="13dp"
                android:gravity="center"
                android:text="4.5"
                android:textColor="@color/white"
                android:textSize="7sp"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="146dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="17dp"
                android:layout_height="13dp"
                android:contentDescription="@string/rating_star_show"
                app:srcCompat="@drawable/rating_star_24"
                app:tint="@color/white"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="146dp" />


        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="29dp"
            android:layout_height="9dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="20% Off"
            android:textColor="#012E03"
            android:textSize="7sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>